--- a/css/style.css
+++ b/css/style.css
@@ -254,8 +254,8 @@ p {
 }
 
 .icon-antenna::before {
-    display: block;
     content: '';
+    display: block;
     height: 112px;
     margin-bottom: 8px;
     background-color: var(--color-cloud);
@@ -266,8 +266,8 @@ p {
 }
 
 .icon-clock::before {
-    display: block;
     content: '';
+    display: block;
     height: 112px;
     margin-bottom: 8px;
     background-color: var(--color-cloud);
@@ -278,8 +278,8 @@ p {
 }
 
 .icon-diagram::before {
-    display: block;
     content: '';
+    display: block;
     height: 112px;
     margin-bottom: 8px;
     background-color: var(--color-cloud);
@@ -290,8 +290,8 @@ p {
 }
 
 .icon-astronaut::before {
-    display: block;
     content: '';
+    display: block;
     height: 112px;
     margin-bottom: 8px;
     background-color: var(--color-cloud);
@@ -507,9 +507,21 @@ p {
 }
 
 .link-filter {
+    display: block;
     color: var(--color-navy-blue);
     text-decoration: none;
 }
+
+.container-card {
+    border: 0.5px solid #F4F4FD;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+    background-color: var(--color-white);
+}
+
+.link-filter:hover,
+.link-filter:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);;
+}       
 
 .container-card {
     padding: 32px 0 32px 16px;
@@ -540,14 +552,3 @@ p {
 .filter .list+.list {
     margin-left: 24px;
 }
-
-.container-card {
-    border: 0.5px solid #F4F4FD;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
-    background-color: var(--color-white);
-}
-
-.container-card:hover,
-.container-card:focus {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);;
-}       
